# ai-sales-crm

./: PROGRESS.md  README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py
backend/app/models/: activity.py  contact.py  deal.py  prediction.py
backend/app/routers/: activities.py  contacts.py  deals.py  emails.py  insights.py  predictions.py
backend/app/schemas/: contact.py  deal.py  insight.py
backend/app/services/: churn_service.py  email_service.py  groq_service.py  insight_service.py  resend_service.py
backend/app/utils/: seed.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  deals.js  insights.js
frontend/src/components/ai/: EmailDraftModal.jsx
frontend/src/components/dashboard/: AIInsightsFeed.jsx  AtRiskPanel.jsx  KPICard.jsx  PipelineChart.jsx  WinRateChart.jsx
frontend/src/components/deals/: AddContactModal.jsx  AddDealModal.jsx
frontend/src/components/layout/: Layout.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/pages/: AtRisk.jsx  Contacts.jsx  Dashboard.jsx  Pipeline.jsx  Settings.jsx
frontend/src/store/: dealsStore.js  insightsStore.js
